# lab14

projects/lab/: CMakeLists.txt
projects/lab/sources/: builder.cpp
